[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Pictures/background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Pictures/titlewhite.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/a.mp3" type="AudioStream" id=4]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 515, 391 )
scale = Vector2( 2.84609, 4.18056 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_right = 34.0
margin_bottom = 92.0

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 68.0
margin_bottom = 20.0
text = "Começar"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 68.0
margin_bottom = 44.0
text = "Opções"

[node name="Tutorial" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 68.0
margin_bottom = 68.0
text = "Tutorial"

[node name="howToPlay" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 68.0
margin_bottom = 92.0
text = "Ajuda"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 68.0
margin_bottom = 116.0
text = "Sair"

[node name="Title" type="Sprite" parent="."]
position = Vector2( 500, 200 )
texture = ExtResource( 3 )

[node name="virusraid" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -3.0
autoplay = true
bus = "Music"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/howToPlay" to="." method="_on_howToPlay_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="ready" from="Title" to="." method="_on_Title_ready"]
